COSMETICS   make it comply with style guidelines.